* 2005-06-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Command line parsing now uses optparse (thanks to J Graham for
	inspiration)
	- MainWindow now accepts drops of files (patch by James Graham)
	- MainWindow has per-window working directory

* 2005-05-24 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix axis positioning in stacked plot where one margin is zero
	
* 2005-05-19 Jeremy Sanders <jeremy@jeremysanders.net>
	- Make size of property window more sensible by default
	- Documentation update
	- Add inside.vsz example
	- Released 0.6
	
* 2005-05-18 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add icon for main window
	- Veusz should look in $HOME not /home/$USER for config file
	- Actually allow data to be modified in Data->Edit dialog
	
* 2005-05-17 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add signal handler to catch ctrl+c and ask to close docs -
	James Graham's idea
	- Changed File->Quit to close all windows. File->Close Window
	closes current window
	
* 2005-05-15 Jeremy Sanders <jeremy@jeremysanders.net>
	- Patch from James Graham to make Ctrl+P print
	- Patch adapted from James to make new documents start in new windows
	- Add context menu to plot window to change update period
	- Also add force update option
	- Change lots of button pressed() to clicked() as pressed() breaks
	appearance of button
	- Allow datasets to be unlinked in data edit dialog
	- Add Import button to data edit dialog
	- Dialog box improvements (spacing and so on)
	
* 2005-05-14 Jeremy Sanders <jeremy@jeremysanders.net>
	- New widget property code using QTable
	
* 2005-05-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Make super and subscripts move further up and down
	- Adjust alignment code to take account of above modification
	- Document embedding Veusz in other programs
	- Document security of Veusz scripts
	
* 2005-05-10 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fit dataset options now have drop down menus